tests/cases/should_fail/literals/short_ascii_code.stderr
error: encountered unexpected character `'`. ASCII escape code must only contain hex digits
 --> $DIR/short_ascii_code.hash:3:8
2 |   
3 |   k := '\x0';
  |          ^^ here
